re PR middle-end/45565 (ICE: in execute_todo, at passes.c:1276 with -fno-toplevel-reorder -fno-inline -fipa-cp-clone -fkeep-inline-functions)

2010-09-23  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45565
	* cgraphunit.c (cgraph_redirect_edge_call_stmt_to_callee):
	Make sure to adjust the fndecl before replacing the stmt.

	* g++.dg/ipa/pr45565.C: New testcase.

From-SVN: r164561